# ramshared

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFESTO.md  MEMORY.md  README.md  ROADMAP.md  SECURITY.md  deny.toml  fable.md  pr_desc.md  pr_desc.txt  pr_description.md  release-please-config.json  superprompt.md  test.js  test2.js  test3.js  test4.js  test_regex.js  validation.md
.claude/rules/: benchmarks.md  coding.md  documentation.md  governance.md  kernel.md  security.md  ssdv3.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  comment-language.yml  gitleaks.yml  pr-body.yml  release.yml  security-scans.yml  validation-schema.yml
crates/ramshared-agent/: Cargo.toml
crates/ramshared-agent/benches/: swap_bench.rs
crates/ramshared-agent/src/: explain.rs  lib.rs  local.rs  main.rs  psi.rs  swap.rs  watchdog.rs  win_mem.rs
crates/ramshared-block/: Cargo.toml
crates/ramshared-broker/: Cargo.toml
crates/ramshared-cli/: Cargo.toml
crates/ramshared-cli/src/: cascade.rs  diagnose.rs  main.rs
crates/ramshared-cli/src/cascade/: cascade_io.rs  lifecycle.rs  mod.rs
crates/ramshared-config/: Cargo.toml
crates/ramshared-cuda/: Cargo.toml
crates/ramshared-cuda/src/: driver.rs  ffi.rs  lib.rs  loader_unix.rs  loader_win.rs  probe.rs  vram_impl.rs
crates/ramshared-dxg/: Cargo.toml
crates/ramshared-integrity/: Cargo.toml
crates/ramshared-tier/: Cargo.toml
crates/ramshared-uring/: Cargo.toml
crates/ramshared-vram/: Cargo.toml
crates/ramshared-vulkan/: Cargo.toml
crates/ramshared-winsvc/: Cargo.toml  winsvc.example.toml
crates/ramshared-winsvc/src/: broker_tenant.rs  config.rs  cuda_probe.rs  driver_link.rs  evidence.rs  host_safety.rs  lib.rs  main.rs  ntpagefile.rs  product_online.rs  proto.rs  runtime.rs  service.rs  smoke.rs  windows_driver.rs  windows_host.rs
crates/ramshared-wsl2d/: Cargo.toml
crates/ramshared-wsl2d/src/: autotier.rs  backend.rs  broker_srv.rs  canary_probe.rs  conn.rs  demote_status.rs  lib.rs  main.rs  residency.rs  state.rs  swap.rs  telemetry.rs  ublk.rs  ublk_control.rs  ublk_queue.rs  ublk_server.rs  uring_smoke.rs
crates/ramshared-wsl2d/tests/: broker_e2e.rs  ublk_control_smoke.rs  ublk_io_smoke.rs  ublk_server.rs  ublk_uapi.rs  ublk_worker.rs  uring_smoke.rs
docs/: BENCHMARKS.md  FAQ.md  INDEX.md  LIBRARIES.md  SSDV3-PROMPTS.md
docs/008-vram-residency-canary/: IMPL.md  PRD.md  SPEC.md  SPECv2.md  SPECv3.md
docs/benchmarks/: README.md  results.jsonl
docs/broker-telemetry-reconciliation/: IMPL.md  PRD.md  README.md  SPEC.md  SPECv2.md
docs/daemon-multiconn/: IMPL.md  PRD.md  SPEC.md  SPECv2.md  SPECv3.md
docs/dcc-out-of-core/: PRD.md
docs/decisions/: ADR-0001-vram-cascade-tiering.md  ADR-0002-rust-userspace-port.md  ADR-0003-page-state-swap-safety.md  ADR-0004-ublk-io-uring-crate.md  ADR-0005-broker-protocol-jsonl.md  ADR-0006-storport-virtual-miniport.md  ADR-0007-kernel-native-language-c.md  README.md
docs/labs/: DUALBOOT-KERNEL-TRUE.md  HYPERV-RUSSIA-LAB.md  HYPERV-VM-ACCESS.md  LAB-DISK-GUARD.md  PARALLEL-WINDOWS-AND-CUSTOM-KERNEL.md  WSL-KERNEL-LAB.md  WSL2-UPSTREAM-CONFIG-PR.md
docs/marketing/: DEMO.md  LAUNCH-KIT.md
docs/memory-broker/: CIVM-TENANT.md  IMPL.md  P0-RESULTS.md  PRD.md  SPEC.md  SPECv2.md  VISION.md
docs/memory-broker-p2-windows/: PRD.md  SPEC.md  SPECv2.md
docs/methodology/: KAHNEMAN-DISCIPLINES.md  SUPERPROMPT.md  kahneman-disciplines.md
docs/packaging/: INSTALLABLES.md  WINDOWS-DRIVER-DISTRIBUTION.md
docs/postmortems/: 2026-07-09-wsl-ghost-ublk-hang.md  TEMPLATE.md
docs/reliability/: BLACK-BOX-FORENSICS.md  DEGRADATION-MATRIX.md  GAP-REGISTER.md  HANG-FREEZE-AUDIT-2026-07-13.md  JULES-PR-AUDIT-20260724.md  SPEC-CODE-CONFRONT-cascade-2026-07-13.md  memory-broker-p0-results.md  wsl2-cascade-validation.md  wsl2-fase0-final.md
docs/reviews/: README.md
docs/runbooks/: FASE-B-KERNEL.md  REVIEW-ADR.md  windows-vram-drive-drill.md
docs/ublk-backend/: IMPL.md  PRD.md  SPEC-ring-loop.md  SPEC.md  SPECv2.md
docs/ublk-daemon-integration/: IMPL.md  PRD.md  SPEC.md
docs/vram-arbiter/: PRD.md
docs/vram-as-ram/: EVALUATION.md  FASE0-FINAL.md  FASE0-RESULTS.md  IMPL.md  PRD-2.md  PRD-3.md  PRD-4.md  PRD-5.md  PRD-6.md  PRD.md  SPEC-WSL2.md  SPECv2-WSL2.md  SPECv3-WSL2.md  VALIDATION-CASCADE.md
docs/vram-provider/: SPEC.md
docs/vulkan-backend/: IMPL.md  PRD.md  SPEC.md
docs/windows-vram-drive/: PASSO0-DRILL-RUNBOOK.md  PRD.md  SPEC.md
docs/zram-writeback-vram/: PRD.md  SPEC.md  SPECv2.md
drivers/windows/: README.md
scripts/: docs-check.sh  quickstart.sh
scripts/kernel/: boot-kernel-logged.ps1  boot-kernel-safe.ps1  build-wsl-kernel.sh  qemu-broker-drill.sh  qemu-ublk-crash-e1.sh  qemu-ublk-crash-e1b.sh  qemu-ublk-daemon.sh  qemu-validate.sh  wsl-kernel-lib.sh  wsl-kernel.sh
scripts/p0/: Invoke-ExternalGpuWddmPressureAudit.ps1  Invoke-GpuWorkloadGate.ps1  Invoke-VramReclaimPressureMatrix.ps1  Start-CudaVramWorkload.ps1  Test-ExternalGpuWddmPressureAuditStatic.ps1  Test-VramReclaimPressureMatrixStatic.ps1  measure-cascade-demote.sh  measure-gpu-workload-vram.ps1  measure-nbd-tcp.sh  measure-net.sh  measure-psi-load.sh  measure-psi.sh  measure-render-vram.ps1  measure-swap-compare.sh  measure-vram-headroom.sh
scripts/package/: build-linux-bundle.sh
scripts/safety/: Test-CascadePressureIntegrityWorker.sh  Test-Wsl2FreezeCampaignStatic.sh  cascade-app.sh  cascade-down.sh  cascade-health.sh  cascade-preflight.sh  cascade-pressure-probe.sh  cascade-up.sh  cascade.conf.example  cascade_pressure_integrity_worker.py  install-cascade-app.sh  install-cascade-boot.sh  install.sh  kmsg-recorder.sh  postmortem.sh  preflight-snapshot.sh  preflight.sh  ramshared-cushion.desktop.in  swap-sanitize.sh  test-wsl2-freeze-campaign-artifact-static.sh  uninstall-cascade-boot.sh  validate-wsl2-freeze-campaign-artifact.sh  wsl2-freeze-campaign.sh  wslconfig-ctl.sh  wslconfig-lib.sh  wslconfig.host.example
tools/: check-broken-links.mjs  generate-docs-index.mjs
(+328 files in other folders)
