[workspace]
resolver = "3"
members = ["crates/ramshared-cli", "crates/ramshared-tier", "crates/ramshared-cuda", "crates/ramshared-block", "crates/ramshared-wsl2d", "crates/ramshared-integrity", "crates/ramshared-uring", "crates/ramshared-broker", "crates/ramshared-agent", "crates/ramshared-vram"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://example.invalid/ramshared"
