[workspace]
resolver = "3"
members = [
    "crates/ramshared-dxg",
    "crates/ramshared-cli",
    "crates/ramshared-tier",
    "crates/ramshared-cuda",
    "crates/ramshared-block",
    "crates/ramshared-wsl2d",
    "crates/ramshared-integrity",
    "crates/ramshared-uring",
    "crates/ramshared-broker",
    "crates/ramshared-config",
    "crates/ramshared-agent",
    "crates/ramshared-vram",
    "crates/ramshared-vulkan",
    "crates/ramshared-winsvc",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://example.invalid/ramshared"
# Crates internas do workspace: nunca vão ao crates.io (repo = example.invalid). Marcá-las
# não-publicáveis previne `cargo publish` acidental e faz o cargo-deny tratá-las como privadas
# (as deps de path intra-workspace deixam de contar como "wildcard" externa). Ver deny.toml.
publish = false
