[package]
name = "ramshared-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "ramshared_agent"
path = "src/lib.rs"

[[bin]]
name = "ramshared-agent"
path = "src/main.rs"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
ramshared-broker = { path = "../ramshared-broker" }
