[package]
name = "ramshared-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "ramshared_agent"
path = "src/lib.rs"

[[bin]]
name = "ramshared-agent"
path = "src/main.rs"

[[bin]]
name = "ramshared-host-agent"
path = "src/bin/ramshared_host_agent.rs"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
ramshared-broker = { path = "../ramshared-broker" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "swap_bench"
harness = false
