[package]
name = "ramshared-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ramshared"
path = "src/main.rs"

[dependencies]
ramshared-tier = { path = "../ramshared-tier" }
ramshared-cuda = { path = "../ramshared-cuda" }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
