[package]
name = "ramshared-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "ramshared"
path = "src/main.rs"

[dependencies]
ramshared-tier = { path = "../ramshared-tier" }
ramshared-cuda = { path = "../ramshared-cuda" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
