[package]
name = "ramshared-cuda"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
ramshared-vram = { path = "../ramshared-vram" }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
