[package]
name = "ramshared-winsvc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Windows userspace service for StorPort VRAM disk (SPEC windows-swap-driver)"

[[bin]]
name = "ramshared-winsvc"
path = "src/main.rs"

[lib]
name = "ramshared_winsvc"
path = "src/lib.rs"

[dependencies]
ramshared-block = { path = "../ramshared-block" }
ramshared-broker = { path = "../ramshared-broker" }
ramshared-vram = { path = "../ramshared-vram" }
serde = { version = "1", features = ["derive"] }
toml = "1.1"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_SystemInformation",
] }
# CUDA loader is pulled transitively when Windows path uses ramshared-cuda.
ramshared-cuda = { path = "../ramshared-cuda" }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
