[package]
name = "ramshared-wsl2d"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "ramshared_wsl2d"
path = "src/lib.rs"

[[bin]]
name = "ramshared-wsl2d"
path = "src/main.rs"

[dependencies]
ramshared-cuda = { path = "../ramshared-cuda" }
ramshared-block = { path = "../ramshared-block" }
ramshared-tier = { path = "../ramshared-tier" }
ramshared-integrity = { path = "../ramshared-integrity" }
ramshared-uring = { path = "../ramshared-uring" }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
